# impactgen

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  impactgen.yml  out.json  setup.cfg  setup.py
lua/ge/extensions/impactgen/: crashOutput.lua
lua/ge/extensions/tech/impactgen/: crashOutput.lua
lua/vehicle/extensions/tech/impactgen/: damageEvaluation.lua
python/: setup.cfg  setup.py
python/src/impactgen/: __init__.py  impactgen.py  main.py  materialmngr.py
src/impactgen/: __init__.py  api.py  impactgen.py  main.py  materialmngr.py
