[metadata]
name = impactgen
description = Python script to generate low-impact crashes
author = BeamNG GmbH
author-email = tech@beamng.gmbh
license = MIT
url = https://github.com/BeamNG/impactgen
long-description = file: README.md
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

install_requires =
    wheel
    beamngpy>=1.31
    click
    pyyaml
    numpy
    pillow
    opencv-python
    humanfriendly
    scipy
    scikit-image
    wand
    seaborn
    pandas

tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[test]
addopts = tests

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[options.entry_points]
console_scripts =
    impactgen = impactgen.main:cli

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
